syntax = "proto3";

package comments;
option go_package = "./comments";

message Comment {
  int64 id = 1;
  int64 user_id = 2;
  string username = 3;
  string avatar = 4;
  string content = 5;
  int64 root_id = 6;
  int64 parent_id = 7;
  string created_at = 8;
  repeated Comment children = 9;
}

message ListCommentReq {
  string category = 1;
  int64 object_id = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message CommentListResp {
  int32 code = 1;
  string message = 2;
  repeated Comment data = 3;
  int32 total = 4;
}

message AddCommentReq {
  int64 user_id = 1;
  string content = 2;
  string category = 3;
  int64 object_id = 4;
  int64 root_id = 5;
  int64 parent_id = 6;
}

message AddCommentResp {
  int64 id = 1;
}

message DeleteCommentReq {
  string id = 1;
}

message DeleteCommentResp {
  int32 code = 1;
  string message = 2;
}

service CommentsServer {
  rpc AddComment(AddCommentReq) returns (AddCommentResp);
  rpc ListComment(ListCommentReq) returns (CommentListResp);
  rpc DeleteComment(DeleteCommentReq) returns (DeleteCommentResp);
}
